--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -45,7 +45,8 @@
   color-scheme: light;
 }
 
-html {
+html,
+body {
   overflow-x: hidden;
 }
 
